--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
-direct.smtpmqgateway.binding.port=1025
+server.port=8084
+james.server.webadmin.port:8085
  
+direct.config.service.url=http://localhost:8082
  
 spring.rabbitmq.host: localhost
 spring.rabbitmq.port: 5672
