--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,10 @@
-server.port=8084
-james.server.webadmin.port:8085
+server.port=8087
  
 direct.config.service.url=http://localhost:8082
+ 
+direct.webservices.security.basic.user.name=admin
+direct.webservices.security.basic.user.password=d1r3ct;
+direct.xd.usestreams:true
  
 spring.rabbitmq.host: localhost
 spring.rabbitmq.port: 5672
