--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,11 @@
-server.port=8081
+server.port=8083
+ 
+direct.config.service.url=http://localhost:8082
+direct.msgmonitor.service.url=http://localhost:8081
+direct.gateway.postprocess.ConsumeMDNProcessed:true
+ 
+direct.webservices.security.basic.user.name=admin
+direct.webservices.security.basic.user.password=d1r3ct;
+ 
+spring.rabbitmq.username: guest
+spring.rabbitmq.password: guest
