--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,7 @@
-server.port=8083
+direct.smtpmqgateway.binding.port=1025
  
-direct.config.service.url=http://localhost:8082
-direct.msgmonitor.service.url=http://localhost:8081
-direct.gateway.postprocess.ConsumeMDNProcessed:true
  
-direct.webservices.security.basic.user.name=admin
-direct.webservices.security.basic.user.password=d1r3ct;
- 
+spring.rabbitmq.host: localhost
+spring.rabbitmq.port: 5672
 spring.rabbitmq.username: guest
 spring.rabbitmq.password: guest
